projects/chd/incident-cavinkare/k8s-config/dev/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: incident
  name: incident-svc
  namespace: chd-cavinkare
spec:
  ports:
    - port: 8083
      protocol: TCP
      targetPort: 8083
  selector:
    app: incident
