projects/chd/incident-cavinkare/k8s-config/dev/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: incident
  namespace: chd-cavinkare
  labels:
    app: incident
  annotations:
    cert-manager.io/cluster-issuer: "lets-encrypt"
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  ingressClassName: public
  tls:
    - hosts:
        - chd-incident-cavinkare-dev.coherent.in
      secretName: incident-tls
  rules:
    - host: "chd-incident-cavinkare-dev.coherent.in"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: incident-svc
                port:
                  number: 8083
